fix vercel format & unnecessary requirements.txt

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,17 @@
 {
-    "builds": [
-      {
-        "src": "api/app.py",
-        "use": "@vercel/python"
-      }
-    ],
-    "routes": [
-      {
-        "src": "^/(.*)",
-        "dest": "api/app.py"
-      }
-    ]
-  }
-  
+  "functions": {
+    "api/app.py": {
+      "runtime": "python3.12",
+      "includeFiles": [
+        "api/Data/**",
+        "api/Models/**"
+      ]
+    }
+  },
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/app.py"
+    }
+  ]
+}
